# sysbak-admin

./: README.md  meson.build  meson_options.txt
data/: io-operation-daemon.service.in  meson.build  org.io.operation.gdbus.conf  org.io.operation.gdbus.service.in  org.io.operation.gdbus.xml  org.sysbak.admin.gdbus.conf  org.sysbak.admin.gdbus.service.in  org.sysbak.admin.gdbus.xml  sysbak-admin-daemon.service.in
demo/: Makefile  bitmap.h  checksum.c  checksum.h  config.h  extfsclone.c  gettext.h  main.c  partclone.c  partclone.extfs  partclone.h  progress.c  progress.h  torrent_helper.c  torrent_helper.h
src/: Makefile  bitmap.h  checksum.c  gdbus-bitmap.h  gdbus-btrfs.c  gdbus-btrfs.h  gdbus-checksum.c  gdbus-checksum.h  gdbus-disk.c  gdbus-disk.h  gdbus-extfs.c  gdbus-extfs.h  gdbus-fatfs.c  gdbus-fatfs.h  gdbus-server.c  gdbus-share.c  gdbus-share.h  gdbus-xfsfs.c  gdbus-xfsfs.h  libmain.c  libtest  main.c  meson.build  progress.c  progress.h  sysbak-extfs.c  sysbak-extfs.h  sysbak-share.c  sysbak-share.h  tags
src/btrfs/: btrfs-list.c  btrfs-list.h  btrfsck.h  commands.h  crc32c.c  crc32c.h  ctree.c  ctree.h  dir-item.c  disk-io.c  disk-io.h  extent-cache.c  extent-cache.h  extent-tree.c  extent_io.c  extent_io.h  file-item.c  free-space-cache.c  free-space-cache.h  hash.h  inode-item.c  inode-map.c  list_sort.c  list_sort.h  print-tree.c  qgroup-verify.c  qgroup-verify.h  qgroup.c  qgroup.h  radix-tree.c  raid6.c  rbtree-utils.h  rbtree.h  rbtree_augmented.h  repair.c  root-tree.c  send-stream.c  send-stream.h  send-utils.c  send-utils.h  (+10 more)
src/libsysbak/: bitmap.h  checksum.c  checksum.h  main.c  meson.build  pc-manager.h  progress.c  progress.h  sysbak-btrfs.c  sysbak-btrfs.h  sysbak-check.c  sysbak-check.h  sysbak-disk.c  sysbak-disk.h  sysbak-extfs.c  sysbak-extfs.h  sysbak-fatfs.c  sysbak-fatfs.h  sysbak-fs.h  sysbak-gdbus.c  sysbak-gdbus.h  sysbak-share.c  sysbak-share.h  sysbak-xfsfs.c  sysbak-xfsfs.h
src/xfs/: cache.c  cache.h  defer_item.c  kmem.c  libxfs.h  libxfs_api_defs.h  libxfs_io.h  libxfs_priv.h  list.h  list_sort.c  logitem.c  radix-tree.c  radix-tree.h  rdwr.c  trans.c  util.c  xfs_ag_resv.c  xfs_ag_resv.h  xfs_alloc.c  xfs_alloc.h  xfs_alloc_btree.c  xfs_alloc_btree.h  xfs_bit.c  xfs_bit.h  xfs_bmap.c  xfs_bmap.h  xfs_bmap_btree.c  xfs_bmap_btree.h  xfs_btree.c  xfs_btree.h  xfs_da_btree.c  xfs_da_btree.h  xfs_da_format.c  xfs_defer.c  xfs_defer.h  xfs_dir2.c  xfs_dir2.h  xfs_dir2_block.c  xfs_dir2_priv.h  xfs_format.h  (+26 more)
test/: Makefile  libtest  main.c  test.ini
