option('systemdsystemunitdir', type: 'string', value: '', description: 'custom directory for systemd system units')
option('introspection', type: 'boolean', value: true, description: 'Enable introspection for this build')
option('docbook', type: 'boolean', value: false, description: 'build documentation (requires xmlto)')
